--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-# [lib]
-# name = "brainy"
-# path = "src/lib.rs"
+[lib]
+name = "brainy"
+path = "src/lib.rs"
 
 [dependencies]
 dot = { git = "https://github.com/przygienda/dot-rust.git" }
