Use BLAS for matrix multiplication!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ dot = { git = "https://github.com/przygienda/dot-rust.git" }
 num = "0.4"
 rand = "0.8"
 brainy-derive = { path = "brainy-derive" }
+cblas = "0.4"
+# blas-src = { version = "0.10", features = ["accelerate"] }
