don't think this will work

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ num = "0.4"
 rand = "0.8"
 brainy-derive = { path = "brainy-derive" }
 cblas = "0.4"
-# blas-src = { version = "0.10", features = ["accelerate"] }
+seq-macro = "0.3"
