--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ num = "0.4"
 rand = "0.8"
 brainy-derive = { path = "brainy-derive" }
 cblas = "0.4"
+blas = "0.22"
 # blas-src = { version = "0.10", features = ["accelerate"] }
