--- a/tensorous-demo/Cargo.toml
+++ b/tensorous-demo/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "brainy-demo"
+name = "tensorous-demo"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-brainy = { path = ".." }
+tensorous = { path = ".." }
