--- a/tensrus-demo/Cargo.toml
+++ b/tensrus-demo/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "tensorous-demo"
+name = "tensrus-demo"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tensorous = { path = ".." }
+tensrus = { path = ".." }
