Majorly refactor everything
Can't be bothered to import the history, but some big changes:

- Make Ts unconstrained except in Vars (this was the big one that was driving me
insane to change)
- Completely rework Views/Translations (I like where they ended up for the most part)
- Make Vars lazy-evaluate their values (which should make it easier to run stuff
on GPUs eventually)
- Add a new Graph concept for Vars (and make sure they don't leak memory)
- In general, rely more on traits and less on Derive codegen and const generic expressions
- Completely ban associated constants (they're so janky)

It's not 100% at feature parity but most of what I need is there.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,22 +3,17 @@ name = "tensrus"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[lib]
-name = "tensrus"
-path = "src/lib.rs"
-
 [dependencies]
-dot = { git = "https://github.com/przygienda/dot-rust.git" }
+seq-macro = "0.3"
 num = "0.4"
-rand = "0.9.0-alpha.1"
 tensrus-derive = { path = "tensrus-derive" }
 blas = "0.22"
-seq-macro = "0.3"
+rand = "0.9.0-alpha.1"
 rand_distr = "0.5.0-alpha.1"
+static_assertions = "1.1"
 
 [dev-dependencies]
 proptest = "1.0.0"
 
 [features]
-proptest = []
+slow_tests = []
